<resources>
    <string name="app_name">Journal Search</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="register">Sign-In</string>
    <string name="fill_field">Field cannot be empty</string>
    <string name="not_have_account_signup">Not have account? SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="library">Library</string>
    <string name="enter_you_started_email_to_receive_instruction_to_reset_you_password">Enter You Started Email To Receive Instruction to Reset You Password</string>
    <string name="submit">SUBMIT</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="welcome_to_journal_search">Welcome to Journal Search</string>
    <string name="title">Journal Search</string>
    <string name="text">Journal Search merupakan aplikasi Pencarian Jurnal Nasional dan Internasional. Kami membuat aplikasi ini bertujuan untuk memudahkan pengguna untuk mencari jurnal atau artikel yang sulit untuk dicari pada website tertentu.</string>
    <string name="kategori_jurnal">Kategori Jurnal</string>
    <string name="healty">KESEHATAN</string>
    <string name="teknik">TEKNIK</string>
    <string name="ekonomi">EKONOMI</string>
    <string name="hukum">HUKUM</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="change_your_photo">change your photo</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="mengubah_nama_dan_foto_profil">Mengubah Nama dan Foto Profil</string>
    <string name="informasi_aplikasi">Informasi Aplikasi</string>
    <string name="informasi_seputar_aplikasi_kami">Informasi seputar aplikasi kami</string>
    <string name="keluar">Keluar</string>
    <string name="keluar_akun_anda">keluar akun anda</string>
    <string name="mengunggah_file">Mengunggah File</string>
    <string name="silahkan_mengunggah_file_anda_disini">Silahkan mengunggah file anda disini</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="pdf">Anda dapat mengunggah file jurnal anda disini (File PDF)</string>
    <string name="upload_1">Mengunggah file jurnal anda</string>
    <string name="pdf_only">Mengunggah File PDF</string>
    <string name="judul">TITLE</string>
</resources>