<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="290dp"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/journal_login"
        tools:ignore="ContentDescription" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailText"
        android:layout_above="@id/passwordText"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordText"
        app:passwordToggleEnabled="true"
        android:layout_centerInParent="true">

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        tools:ignore="Autofill" />

</com.google.android.material.textfield.TextInputLayout>

    <com.example.model.costume.ButtonLogin
        android:id="@+id/btn_login"
        style="@style/BtnRegular"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/for_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/noAccount"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerInParent="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="125dp"
        android:text="@string/not_have_account_signup"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/for_password"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:layout_above="@id/social_icons"
        android:text="@string/or_sign_in_with"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/social_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/google_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_google_logo"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</RelativeLayout>