<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@color/green_military">

  <ImageView
      android:id="@+id/btn_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="10dp"
      android:padding="5dp"
      android:src="@drawable/arrow_back"
      android:contentDescription="@string/change_your_photo" />

  <de.hdodenhof.circleimageview.CircleImageView
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:src="@drawable/white_account"
      android:id="@+id/img_item_photo"
      android:layout_alignParentTop="true"
      android:layout_centerInParent="true"
      android:layout_marginTop="50dp"/>

  <TextView
      android:id="@+id/title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/edit_your_profile"
      android:layout_below="@id/img_item_photo"
      android:textAlignment="center"
      android:layout_marginTop="20dp"
      android:textColor="@color/white"
      android:textSize="25sp" />

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="360dp"
      android:layout_height="wrap_content"
      android:id="@+id/nameText"
      android:layout_below="@id/title"
      android:layout_marginTop="30dp"
      android:layout_marginBottom="10dp"
      android:layout_centerInParent="true">

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName|textCapWords"
        tools:ignore="Autofill" />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/btn_update"
      style="@style/BtnRegular"
      android:layout_width="360dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/nameText"
      android:layout_centerInParent="true"
      android:layout_marginTop="10dp"
      android:text="@string/update"
      android:textColor="@color/white" />
</RelativeLayout>