<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:src="@drawable/forpas"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:src="@drawable/arrow_back"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="245dp"
        android:text="@string/forgot_password1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_marginTop="5dp"
        android:text="@string/enter_you_started_email_to_receive_instruction_to_reset_you_password"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailText"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.model.costume.ButtonSubmit
        android:id="@+id/btn_submit"
        style="@style/BtnRegular"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailText"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/login" />

</RelativeLayout>