<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_military"
    tools:context=".UploadActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/change_your_photo"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/journal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mengunggah_file"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_below="@id/img_logo"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/title_upload"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_upload"
        android:text="@string/pdf"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/view_setting_account"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="15dp"
        android:layout_below="@id/text1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo_set"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/pdf"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/setting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/pdf_only"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/logo_set"
                app:layout_constraintStart_toEndOf="@+id/logo_set"
                app:layout_constraintTop_toTopOf="@id/logo_set"
                app:layout_constraintVertical_bias="0.035" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/upload_1"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/logo_set"
                app:layout_constraintStart_toEndOf="@+id/logo_set"
                app:layout_constraintTop_toTopOf="@+id/logo_set"
                app:layout_constraintVertical_bias="0.78" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>